@@ -1,5 +1,10 @@
 2007-08-14  Michal Ludvig  <michal@logix.cz>
 
+	* setup.py, S3/Utils.py: Try import xml.etree.ElementTree
+	  or elementtree.ElementTree module.
+
+2007-08-14  Michal Ludvig  <michal@logix.cz>
+
 	* s3cmd.1: Add info about --encrypt parameter.
 
 2007-08-14  Michal Ludvig  <michal@logix.cz>
